@@ -1,3 +1,14 @@
+2000-09-05  OKUJI Yoshinori  <okuji@gnu.org>
+
+	From Alessandro Rubini <rubini@gnu.org>:
+	* stage2/char_io.c (print_error) [!STAGE1_5]: Print ERRNUM like
+	"Error 9: Unknown boot failure".
+	(print_error) [STAGE1_5]: Don't print a colon.
+	* util/grub-install.in: When checking if an error occurred, use
+	the expression "Error [0-9]*: " instead of "Error: ".
+	* docs/user-ref.texi (Stage1.5 errors): Updated, since the error
+	form changed.
+	
 2000-09-04  OKUJI Yoshinori  <okuji@gnu.org>
 
 	* stage2/stage2.c (run_menu) [GRUB_UTIL]: Set DISP_UP and
